--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main class="contenedor-productos">
     <div class="producto">
-      <video autoplay muted loop playsinline width="100%">
+      <video autoplay loop playsinline width="100%">
         <source src="videos/bananasplit.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
       </video>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="producto">
-      <video autoplay muted loop playsinline width="100%">
+      <video autoplay loop playsinline width="100%">
         <source src="videos/acaai.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
       </video>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="producto">
-      <video autoplay muted loop playsinline width="100%">
+      <video autoplay loop playsinline width="100%">
         <source src="videos/acaitropical.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
       </video>
@@ -42,7 +42,7 @@
     </div>
 
     <div class="producto">
-      <video autoplay muted loop playsinline width="100%">
+      <video autoplay loop playsinline width="100%">
         <source src="videos/montandoacai.mp4" type="video/mp4">
         Tu navegador no soporta la etiqueta de video.
       </video>
