--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       </video>
       <h3>Banana Split</h3>
       <p>Conoce nuestros sabores</p>
-      <button id="muteButton" onclick="toggleMute()">Sonido</button>
     </div>
 
     <div class="producto">
@@ -31,7 +30,6 @@
       </video>
       <h3>Açai</h3>
       <p>Me olvidé de grabar mi aca'ai</p>
-      <button id="muteButton" onclick="toggleMute()">Sonido</button>
     </div>
 
     <div class="producto">
@@ -41,7 +39,6 @@
       </video>
       <h3>Açai Tropical (Fitness)</h3>
       <p>Ya probaste nuestro açai tropical?</p>
-      <button id="muteButton" onclick="toggleMute()">Sonido</button>
     </div>
 
     <div class="producto">
@@ -51,39 +48,22 @@
       </video>
       <h3>Montando nuestro açai</h3>
       <p>Nuestros clientes merecen siempre lo mejor</p>
-      <button id="muteButton" onclick="toggleMute()">Sonido</button>
     </div>
   </main>
-  
-<script>
-  // Función para alternar el mute
-  function toggleMute() {
-    var video = document.getElementById('video');
-    var muteButton = document.getElementById('muteButton');
-    
-    if (video.muted) {
-      video.muted = false;
-      muteButton.textContent = 'Mutear'; // Cambiar el texto del botón
-    } else {
-      video.muted = true;
-      muteButton.textContent = 'Desmutear'; // Cambiar el texto del botón
-    }
-  }
-</script>
   
     <footer>
       <p>© 2025 Top Açai - Todos los derechos reservados</p>
       <div class="redes-sociales">
-        <a href="https://www.instagram.com/tuusuario" target="_blank" title="Instagram">
+        <a href="https://www.instagram.com/top_acai_pjc_2024" target="_blank" title="Instagram">
           <img src="imagenes/iconos/instagram.png" alt="Instagram">
         </a>
-        <a href="https://www.facebook.com/tuusuario" target="_blank" title="Facebook">
+        <a href="https://www.facebook.com/top açai pjc" target="_blank" title="Facebook">
           <img src="imagenes/iconos/facebook.png" alt="Facebook">
         </a>
         <a href="https://wa.me/595986315364?text=Hola!%20quiero%20hacer%20un%20pedido%20de..." target="_blank" title="WhatsApp">
           <img src="imagenes/iconos/whatsapp.png" alt="WhatsApp">
         </a>
-        <a href="https://www.tiktok.com/@tuusuario" target="_blank" title="TikTok">
+        <a href="https://www.tiktok.com/@top_acai00" target="_blank" title="TikTok">
           <img src="imagenes/iconos/tiktok.png" alt="TikTok">
         </a>
       </div>
