--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
   <footer>
     <p>© 2025 Top Açai - Todos los derechos reservados</p>
     <div class="redes-sociales">
-      <a href="https://www.instagram.com/top_acai_pjc_2024" target="_blank" title="Instagram">
+      <a href="https://www.instagram.com/top_acai_pjc" target="_blank" title="Instagram">
         <img src="imagenes/iconos/instagram.png" alt="Instagram">
       </a>
-      <a href="https://www.facebook.com/top açai pjc" target="_blank" title="Facebook">
+      <a href="https://www.facebook.com/share/18qsJ7n1vA/?mibextid=wwXlfr" target="_blank" title="Facebook">
         <img src="imagenes/iconos/facebook.png" alt="Facebook">
       </a>
       <a href="https://wa.me/595986315364?text=Hola!%20quiero%20hacer%20un%20pedido%20de..." target="_blank" title="WhatsApp">
